feat(ai-service): scope each work-document model call to one task
Each task kind now sends its own response schema with the task id and
prompt. Java checks that schema again before publication, and initial
mapping requires a persisted transfer id.

@cf_ignore